# rigg

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  install  package.json  rustfmt.toml  tsconfig.json
.github/workflows/: fmt.yml  lint.yml  release.yml  test.yml  www-build.yml  www-check.yml  www-deploy.yml
.rigg/: debug-codex-interactions.yaml  debug-control-flow.yaml  debug-conversations.yaml  debug-cursor.yaml  debug-inputs-shell.md  debug-inputs-shell.yaml  debug-opencode.yaml  debug-progress.yaml  debug-shell-output.yaml  impl.yaml  plan.yaml  refactor.yaml  review-branch.yaml  review-commit.yaml  review-fix.yaml  review-uncommitted.yaml  review.yaml  ship.yaml  ux-design.yaml
.rigg/docs/: examples.md  schema-reference.md  workflow-syntax.md
crates/cli/: Cargo.toml
crates/cli/skills/: skill.md
crates/cli/skills/docs/: examples.md  schema-reference.md  workflow-syntax.md
crates/cli/src/: main.rs
crates/cli/src/commands/: init.rs  input.rs  logs.rs  mod.rs  status.rs  validate.rs  workspace.rs
crates/cli/src/commands/run/: format.rs  mod.rs  progress.rs
crates/cli/tests/: init.rs  run_failure.rs  run_success.rs  smoke.rs  status.rs
crates/cli/tests/common/: mod.rs
crates/config/: Cargo.toml
crates/config/src/: compile.rs  lib.rs  load.rs  model.rs  source.rs  syntax.rs
crates/config/src/loader/: action.rs  expr.rs  mod.rs  tests.rs
crates/config/src/loader/compile/: control.rs  conversation.rs  inputs.rs  mod.rs  scope.rs
crates/config/src/loader/tests/: action.rs  control_flow.rs  conversation.rs  exports.rs  inputs.rs  node_structure.rs  references.rs  support.rs
crates/core/: Cargo.toml
crates/core/src/: conversation.rs  engine.rs  event.rs  flow.rs  ids.rs  lib.rs  progress.rs  state.rs
crates/core/src/expr/: lang.rs  mod.rs  template.rs
crates/core/src/run/: event.rs  mod.rs  state.rs
crates/core/src/workflow/: action.rs  mod.rs  schema.rs
crates/engine/: Cargo.toml
crates/engine/src/: action.rs  context.rs  conversations.rs  error.rs  lib.rs  protocol.rs  record.rs  render.rs  result.rs  run_state.rs  runner.rs  tests.rs
crates/engine/src/execute/: branch.rs  group.rs  loop.rs  mod.rs  parallel.rs
crates/engine/src/tests/: branch.rs  conditionals.rs  conversation.rs  fixture.rs  group.rs  input_validation.rs  loop.rs  parallel.rs  progress.rs  request_rendering.rs  result_finalization.rs  sequential.rs
crates/engine/src/tests/fixture/: builders.rs  clocks.rs  executors.rs  recorders.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: executors.rs  lib.rs  process.rs
crates/runtime/src/process/: decoder.rs  mod.rs  tests.rs
crates/runtime/src/process/tests/: fixture.rs
crates/runtime/src/runner/: events.rs  io.rs  json.rs  lines.rs  mod.rs
crates/runtime/src/runner/claude/: args.rs  events.rs  mod.rs  stream.rs
crates/runtime/src/runner/codex/: args.rs  events.rs  mod.rs  stream.rs
crates/store/: Cargo.toml
crates/store/src/: fs.rs  fs_recorder.rs  fs_store.rs  lib.rs  mapping.rs  projection.rs  protocol.rs  record.rs  store.rs
script/: build-cli.ts
www/: README.md  astro.config.mjs  package.json  wrangler.jsonc
www/public/: llms-full.txt  llms.txt
www/src/content/docs/docs/: index.mdx
www/src/content/docs/docs/examples/: index.mdx
www/src/content/docs/docs/getting-started/: index.mdx
www/src/content/docs/docs/reference/: cli.mdx  index.mdx  schema.mdx
www/src/content/docs/docs/workflows/: control-flow.mdx  conversations.mdx  expressions.mdx  index.mdx  steps.mdx
www/src/layouts/: BaseLayout.astro
www/src/pages/: index.astro  llms-full.txt.ts  llms.txt.ts  og.png.ts
www/src/styles/: global.css  starlight.css
