[package]
name = "rigg-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rigg-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
thiserror.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
