[package]
name = "rigg-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rigg-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

[lints]
workspace = true
